syntax = "proto3";

option go_package = "github.com/franciscof12/common/orders";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse) {}
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}
}
message Order {
  int32 orderID = 1;
  int32 customerID = 2;
  int32 productID = 3;
  int32 quantity = 4;
}


message CreateOrderRequest {
  int32 customerID = 1;
  int32 productID = 2;
  int32 quantity = 3;
}

message OrderResponse{
  string status = 1;
}

message GetOrderRequest {
  int32 orderID = 1;
}

message GetOrderResponse {
  repeated Order orders = 1;
} 